added some login apis

--- a/TrailerTV/Base.lproj/Main.storyboard
+++ b/TrailerTV/Base.lproj/Main.storyboard
@@ -43,6 +43,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bat-Iq-4h7">
                                         <rect key="frame" x="0.0" y="151.00000000000003" width="374" height="30"/>
                                         <state key="normal" title="Login"/>
+                                        <connections>
+                                            <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchDown" id="kNV-NR-d5Z"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NkM-kV-nbj">
                                         <rect key="frame" x="0.0" y="201.66666666666666" width="374" height="20.333333333333343"/>
